--- a/style.css
+++ b/style.css
@@ -144,7 +144,7 @@ body {
      padding: 16px 6px;
      margin-top: 16px;
      display: flex;
-     justify-content: space-between;
+     justify-content: flex-end;
      gap: 0 4px;
      align-items: center;
 }
