--- a/style.css
+++ b/style.css
@@ -14,11 +14,12 @@ body {
      display: flex;
      margin-top: 3rem;
      overflow-y: auto;
+     padding: 10px;
 }
 
 .board {
-     min-width: 255px;
      width: 255px;
+
      background-color: #353535;
      margin: 0 1rem;
      display: flex;
@@ -27,8 +28,10 @@ body {
      padding: 1.2rem;
      border-radius: 4px;
      align-self: flex-start;
-}
+     transition: .4s ease-in-out;
 
+     animation: createAnimationEffect .4s ease-in-out;
+}
 
 
 .board>h3 {
@@ -57,7 +60,12 @@ body {
      display: flex;
      align-items: center;
      justify-content: center;
+
+     animation: createAnimationEffect .4s ease-in-out;
 }
+
+
+
 
 .card.card-move {
      opacity: .3;
@@ -195,7 +203,7 @@ body {
      color: #53cf71;
      font-size: .8rem;
      font-family: sans-serif;
-     transition: .3s ease-in-out; 
+     transition: .3s ease-in-out;
 }
 
 .icon-add-item {
@@ -265,4 +273,24 @@ body {
      font-size: 1.1rem;
      color: white;
      font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+
+
+
+
+
+
+@keyframes createAnimationEffect {
+     0% {
+          transform: scale(.2);
+     }
+
+     70% {
+          transform: scale(1.1);
+     }
+
+     100% {
+          transform: scale(1);
+     }
 }
