--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
      display: flex;
      margin-top: 3rem;
      overflow-y: auto;
-     padding: 10px;
+     padding: 10px 0;
 }
 
 .board {
@@ -61,16 +61,20 @@ body {
      align-items: center;
      justify-content: center;
 
-     animation: createAnimationEffect .4s ease-in-out;
+     /* animation: createAnimationEffect .4s ease-in-out; */
 }
 
+
+.effectCreateCard {
+     animation: createAnimationEffect .4s ease-in-out;
+}
 
 
 
 .card.card-move {
      opacity: .3;
      border: 1px dashed #fff;
-     transform: rotateZ(2deg);
+     transform: rotateZ(5deg);
      transition: .1s ease-in-out;
      cursor: move;
      margin: 12px 0;
@@ -83,6 +87,7 @@ body {
 }
 
 .dropzone {
+     min-height: 100px;
      width: 100%;
      background-color: transparent;
      border-radius: 2px;
